Fix deadly selector
The selector added to SmartField.less destroyed the YUI minifier.
Minifying was not possible anymore and resulted always in a
StackOverflow exception because the created selector was too big to
handle. Instead of 72 selectors for the clearable rules, 1941 selectors
were created.

The selector is over specified anyway which is not necessary and could
decrease performance during runtime.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/ValueField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/ValueField.less
@@ -74,8 +74,8 @@
     }
   }
 
-  &.clearable-always.has-text&:not(.loading)&:not(.disabled)&:not(.compact),
-  &.clearable-focused.has-text.focused&:not(.loading)&:not(.disabled)&:not(.compact) {
+  &.clearable-always.has-text:not(.loading):not(.disabled):not(.compact),
+  &.clearable-focused.has-text.focused:not(.loading):not(.disabled):not(.compact) {
     #scout.value-field-with-icon(~'.clear-icon');
 
     & > .clear-icon {
