--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/datefield/DateField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/datefield/DateField.less
@@ -82,8 +82,8 @@
     }
   }
 
-  &.clearable-always.date-has-text&:not(.disabled)&:not(.compact-date),
-  &.clearable-focused.date-has-text.date-focused&:not(.disabled)&:not(.compact-date) {
+  &.clearable-always.date-has-text:not(.disabled):not(.compact-date),
+  &.clearable-focused.date-has-text.date-focused:not(.disabled):not(.compact-date) {
     #scout.value-field-with-icon(~'.icon.date-clear');
 
     &.date-focused > .icon.date::before,
@@ -118,8 +118,8 @@
     }
   }
 
-  &.clearable-always.time-has-text&:not(.disabled)&:not(.compact-time),
-  &.clearable-focused.time-has-text.time-focused&:not(.disabled)&:not(.compact-time) {
+  &.clearable-always.time-has-text:not(.disabled):not(.compact-time),
+  &.clearable-focused.time-has-text.time-focused:not(.disabled):not(.compact-time) {
     #scout.value-field-with-icon(~'.icon.time-clear');
 
     &.time-focused > .icon.time::before,
