--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/smartfield/SmartField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/smartfield/SmartField.less
@@ -200,8 +200,8 @@
     }
   }
 
-  &.clearable-always.has-text&:not(.loading)&:not(.disabled)&:not(.compact),
-  &.clearable-focused.has-text.focused&:not(.loading)&:not(.disabled)&:not(.compact) {
+  &.clearable-always.has-text:not(.loading):not(.disabled):not(.compact),
+  &.clearable-focused.has-text.focused:not(.loading):not(.disabled):not(.compact) {
 
     &.halign-right {
 
